--- a/examples/simple-store/package.json
+++ b/examples/simple-store/package.json
@@ -9,14 +9,14 @@
         "build": "NODE_ENV=production rollup -c"
     },
     "devDependencies": {
-        "@lwc/rollup-plugin": "8.13.1",
-        "@lwc/signals": "^8.13.1",
-        "@lwc/state": "^0.13.0",
+        "@lwc/rollup-plugin": "^8.19.2",
+        "@lwc/signals": "^8.19.2",
+        "@lwc/state": "^0.16.0",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^5.0.5",
         "@rollup/plugin-typescript": "^11.1.6",
-        "lwc": "8.13.1",
+        "lwc": "^8.19.2",
         "rollup": "^4.19.0",
         "rollup-plugin-livereload": "^2.0.5",
         "rollup-plugin-serve": "^3.0.0",
