--- a/examples/platform-state-managers/package.json
+++ b/examples/platform-state-managers/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "Salesforce App",
   "scripts": {
-    "lint": "eslint **/{aura,lwc}/**/*.js",
+    "lint": "eslint .",
     "test": "npm run test:unit",
     "test:unit": "sfdx-lwc-jest",
     "test:unit:watch": "sfdx-lwc-jest --watch",
@@ -12,30 +12,39 @@
     "test:unit:coverage": "sfdx-lwc-jest --coverage",
     "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "prettier:verify": "prettier --check \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-    "postinstall": "husky install",
+    "prepare": "husky || true",
     "precommit": "lint-staged"
   },
-  "devDependencies": {
-    "@lwc/eslint-plugin-lwc": "^1.1.2",
-    "@prettier/plugin-xml": "^3.2.2",
-    "@salesforce/eslint-config-lwc": "^3.2.3",
-    "@salesforce/eslint-plugin-aura": "^2.0.0",
-    "@salesforce/eslint-plugin-lightning": "^1.0.0",
-    "@salesforce/sfdx-lwc-jest": "^3.1.0",
-    "eslint": "^8.11.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^27.6.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-apex": "^2.0.1"
-  },
   "lint-staged": {
-    "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
-      "prettier --write"
-    ],
-    "**/{aura,lwc}/**/*.js": [
-      "eslint"
-    ]
+      "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
+          "prettier --write"
+      ],
+      "**/*.js": [
+          "eslint"
+      ],
+      "**/lwc/**": [
+          "sfdx-lwc-jest -- --bail --findRelatedTests --passWithNoTests"
+      ]
+  },
+  "devDependencies": {
+    "@lwc/eslint-plugin-lwc": "^3.3.0",
+    "@prettier/plugin-xml": "^3.4.2",
+    "@sa11y/jest": "^8.0.0",
+    "@salesforce/eslint-config-lwc": "^4.1.1",
+    "@salesforce/eslint-plugin-aura": "^3.0.0-beta.1",
+    "@salesforce/eslint-plugin-lightning": "^2.0.0",
+    "@salesforce/sfdx-lwc-jest": "^7.5.0",
+    "eslint": "^9.39.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "jest-canvas-mock": "^2.5.2",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-apex": "^2.2.6"
+  },
+  "volta": {
+      "node": "22.16.0"
   }
 }
